The lexer and parser are now working with basic types for a single tag. Line and block comments are supported.

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@
 /source/List.js.map
 /source/Log.js
 /source/Log.js.map
-/source/Nums.js
-/source/Nums.js.map
+/source/KMath.js
+/source/KMath.js.map
 /source/Tag.js
 /source/Tag.js.map
 /source/Test.js
