Code cleanup, reorganized directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,42 @@
 # Project exclude paths
-/source/ts-parsec/Parsers/AlternativeParser.js
-/source/ts-parsec/Parsers/AlternativeParser.js.map
-/source/ts-parsec/Parsers/AmbiguousParser.js
-/source/ts-parsec/Parsers/AmbiguousParser.js.map
-/source/ts-parsec/Parsers/ApplyParser.js
-/source/ts-parsec/Parsers/ApplyParser.js.map
-/source/ts-parsec/Parsers/ErrorParser.js
-/source/ts-parsec/Parsers/ErrorParser.js.map
-/source/ts-parsec/Parsers/OptionalParser.js
-/source/ts-parsec/Parsers/OptionalParser.js.map
-/source/ts-parsec/Parsers/ParserInterface.js
-/source/ts-parsec/Parsers/ParserInterface.js.map
-/source/ts-parsec/Parsers/RepeativeParser.js
-/source/ts-parsec/Parsers/RepeativeParser.js.map
-/source/ts-parsec/Parsers/Rule.js
-/source/ts-parsec/Parsers/Rule.js.map
-/source/ts-parsec/Parsers/SequencialParser.js
-/source/ts-parsec/Parsers/SequencialParser.js.map
-/source/ts-parsec/Parsers/TokenParser.js
-/source/ts-parsec/Parsers/TokenParser.js.map
-/source/ts-parsec/index.js
-/source/ts-parsec/index.js.map
-/source/ts-parsec/Lexer.js
-/source/ts-parsec/Lexer.js.map
-/source/KD.js
-/source/KD.js.map
-/source/KDLexer.js
-/source/KDLexer.js.map
-/source/KSL.js
-/source/KSL.js.map
-/source/List.js
-/source/List.js.map
-/source/Log.js
-/source/Log.js.map
-/source/KMath.js
-/source/KMath.js.map
-/source/Tag.js
-/source/Tag.js.map
-/source/Test.js
-/source/Test.js.map
-/source/
+/src/ts-parsec/Parsers/AlternativeParser.js
+/src/ts-parsec/Parsers/AlternativeParser.js.map
+/src/ts-parsec/Parsers/AmbiguousParser.js
+/src/ts-parsec/Parsers/AmbiguousParser.js.map
+/src/ts-parsec/Parsers/ApplyParser.js
+/src/ts-parsec/Parsers/ApplyParser.js.map
+/src/ts-parsec/Parsers/ErrorParser.js
+/src/ts-parsec/Parsers/ErrorParser.js.map
+/src/ts-parsec/Parsers/OptionalParser.js
+/src/ts-parsec/Parsers/OptionalParser.js.map
+/src/ts-parsec/Parsers/ParserInterface.js
+/src/ts-parsec/Parsers/ParserInterface.js.map
+/src/ts-parsec/Parsers/RepeativeParser.js
+/src/ts-parsec/Parsers/RepeativeParser.js.map
+/src/ts-parsec/Parsers/Rule.js
+/src/ts-parsec/Parsers/Rule.js.map
+/src/ts-parsec/Parsers/SequencialParser.js
+/src/ts-parsec/Parsers/SequencialParser.js.map
+/src/ts-parsec/Parsers/TokenParser.js
+/src/ts-parsec/Parsers/TokenParser.js.map
+/src/ts-parsec/index.js
+/src/ts-parsec/index.js.map
+/src/Lexer.js
+/src/Lexer.js.map
+/src/KD.js
+/src/KD.js.map
+/src/KDLexer.js
+/src/KDLexer.js.map
+/src/KSL.js
+/src/KSL.js.map
+/src/List.js
+/src/List.js.map
+/src/Log.js
+/src/Log.js.map
+/src/KMath.js
+/src/KMath.js.map
+/src/Tag.js
+/src/Tag.js.map
+/src/Test.js
+/src/Test.js.map
+/src/
